Fix dist/ compilation issue, tweak styles, style scrollbar

--- a/src/css/scss/style.scss
+++ b/src/css/scss/style.scss
@@ -2,7 +2,7 @@
 @import "lib/include-media";
 
 $breakpoints: (phone: 320px, small: 500px, tablet: 768px, desktop: 1024px);
-$font-family: "Open Sans", sans-serif;
+$font-family: "Arial", sans-serif;
 $container-width: 900px;
 $lightblack: rgba(0,0,0,0.3);
 $focusblack: rgba(0,0,0,0.6);
@@ -25,12 +25,36 @@ html {
 html, body {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+html {
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: none;
+    background-color: rgba(200,200,200,0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: none;
+    width: 0.5rem;
+    background-color: rgba(100,100,100,0.6);
+  }
 }
 
 .main-header {
   width: 100%;
   height: 100vh;
   text-align: center;
+}
+
+.error {
+  font: bold small-caps 2rem $font-family;
+  color: rgba(0,0,0,0.75);
 }
 
 /* fade in animation */
@@ -72,6 +96,7 @@ html, body {
 .form-title {
   font: small-caps 2rem $font-family;
   color: #333;
+  @include animation-delay(0.5s);
 }
 
 .search-input {
@@ -87,6 +112,7 @@ html, body {
   border-bottom: 1px solid #333;
   color: $lightblack;
   transition: color 0.25s ease-in-out;
+  @include animation-delay(1.25s);
 
   &:hover, &:focus {
     color: $focusblack;
@@ -107,6 +133,7 @@ html, body {
   background-color: transparent;
   color: $lightblack;
   transition: color 0.25s ease-in-out;
+  @include animation-delay(1.5s);
 
   &:hover {
     color: $focusblack;
@@ -136,7 +163,8 @@ html, body {
   @include animation-iteration-count(infinite);
 
   &.scroll-down {
-    @include position(absolute, null null 2rem calc(50% - 4rem))
+    @include position(absolute, null null 2rem calc(50% - 4rem));
+    @include animation-delay(1.75s);
   }
 
   &.scroll-up {
